# frappe_enhanced_gridview

./: .gitignore  README.md  pyproject.toml
frappe_enhanced_gridview/: boot.py  hooks.py  modules.txt
frappe_enhanced_gridview/public/js/: enhanced_gridview.bundle.js  grid.js  grid_row.js
frappe_enhanced_gridview/public/scss/: enhanced_gridview.bundle.scss
