[project]
name = "frappe_enhanced_gridview"
authors = [
    { name = "Nesscale Solutions Private Limited", email = "info@nesscale.com"}
]
description = "Frappe Grid view with scrollablee child table and allow more than 10 columns"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
